syntax = "proto3";

package product;

option go_package = "local.product.v1;productv1";

message Product {
  string code = 1;
  uint32 price = 2;
}

message GetOneRequest {
  uint32 id = 1;
}

message DeleteRequest {
  uint32 id = 1;
}

message ListResponse {
  repeated Product products = 1;
}

message UpdateRequest {
  uint32 id = 1;
  Product product = 2;
}

message EmptyRequest {}

message EmptyResponse {}

service ProductService {
  rpc List(EmptyRequest) returns (ListResponse);
	rpc GetOne(GetOneRequest) returns (Product);
	rpc Create(Product) returns (EmptyResponse);
	rpc Delete(DeleteRequest) returns (EmptyResponse);
	rpc Update(UpdateRequest) returns (EmptyResponse);
}
